tests/integration/fixtures/laugh/error/자기_자신_상속.laugh
클래스 Robot : Robot { }
